# brain-bankv2

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/exports/: page_audit.csv  papers.csv  people.csv  publication_candidates.csv  publication_candidates_chinese.csv  publication_people_candidates.csv  publication_quality_report.csv  publication_quality_report_1.csv  publication_quality_report_2.csv  publication_quality_report_3.csv  publication_quality_report_4.csv
data/review/: issues.csv  known_issues.csv  wave1_confirmed.csv  wave1_deferred.csv  wave1_p14_decisions.csv  wave1_quality_gap_report.csv  wave1_rejected.csv  wave1_review_queue.csv  wave1_run_record.json
data/seeds/: publication_journal_groups.csv  school_entrypoints.csv  us_top50_schools.csv  美国前200高校排名.xlsx
docs/: m5_publication_entry_summary.md  m6_handoff.md  p5_enrichment_and_sources.md  stage1_information_collection_plan.md
review_workbench/: README.md  app.py
review_workbench/templates/: base.html  edit.html  index.html  queue.html  record.html
src/faculty_spider_v3/: __init__.py  cli.py  config.py  models.py  storage.py  urls.py
src/faculty_spider_v3/discipline/: __init__.py  filter.py
tests/: test_affiliation_backfill.py  test_chinese_name.py  test_discipline_filter.py  test_enrichment.py  test_entrypoints.py  test_journal_list.py  test_official_parse.py  test_official_pipeline.py  test_publications_batch.py  test_publications_pipeline.py  test_quality_gate.py  test_review_issues.py  test_review_report.py  test_seeds.py  test_storage.py
(+24 files in other folders)
